--- a/src/OC/Platform2Bundle/Resources/config/routing.yml
+++ b/src/OC/Platform2Bundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-oc_platform2_homepage:
-    path:     /
-    defaults: { _controller: OCPlatform2Bundle:Default:index }
+hello_the_world:
+    path:     /hello-world
+    defaults: {_controller: OCPlatform2Bundle:Advert:index}
