modification des routes et ajout d'un préfixe de route dans le routing de app + modification des méthodes du controller

--- a/src/OC/Platform2Bundle/Resources/config/routing.yml
+++ b/src/OC/Platform2Bundle/Resources/config/routing.yml
@@ -1,23 +1,47 @@
 # Routes Advert
 oc_platform_home:
-    path:      /
-    defaults: { _controller: OCPlatform2Bundle:Advert:index }
+    path:      /{page}
+    defaults:
+        { _controller: OCPlatform2Bundle:Advert:index }
+        page:   1
+    requirements:
+        page:  \d*
 
 oc_platform_view:
     path:      /advert/{id}
-    defaults: { _controller: OCPlatform2Bundle:Advert:view }
-
-oc_platform_view_slug:
-    path:      /{year}/{slug}.{format}
     defaults:
-        _controller: OCPlatform2Bundle:Advert:viewSlug
-#        valeur prise par défaut rendant le paramètre facultatif
-        format:   html
-#        contraintes
+        { _controller: OCPlatform2Bundle:Advert:view }
     requirements:
-        year:   \d{4}
-        format: html|xml
+        id: \d+
 
 oc_platform_add:
     path:      /add
-    defaults: { _controller: OCPlatform2Bundle:Advert:add }
+    defaults:
+        { _controller: OCPlatform2Bundle:Advert:add }
+
+oc_platform_edit:
+    path:      /edit/{id}
+    defaults:
+        { _controller: OCPlatform2Bundle:Advert:edit }
+    requirements:
+        id: \d+
+
+oc_platform_delete:
+    path:      /delete/{id}
+    defaults:
+        { _controller: OCPlatform2Bundle:Advert:delete }
+    requirements:
+        id: \d+
+
+# exemples :
+
+#oc_platform_view_slug:
+#    path:      /{year}/{slug}.{format}
+#    defaults:
+#        _controller: OCPlatform2Bundle:Advert:viewSlug
+##        valeur prise par défaut rendant le paramètre facultatif
+#        format:   html
+##        contraintes
+#    requirements:
+#        year:   \d{4}
+#        format: html|xml
