création des templates et controllers iteration-5

--- a/src/OC/Platform2Bundle/Resources/config/routing.yml
+++ b/src/OC/Platform2Bundle/Resources/config/routing.yml
@@ -33,6 +33,11 @@ oc_platform_delete:
     requirements:
         id: \d+
 
+oc_platform_menu:
+    path:      /menu
+    defaults:
+        _controller: OCPlatform2Bundle:Advert:menu
+
 
 # exemples :
 
