--- a/src/OC/Platform2Bundle/Resources/config/services.yml
+++ b/src/OC/Platform2Bundle/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
-#    oc_platform2.example:
-#        class: OC\Platform2Bundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    oc_platform.antispam:
+        class: OC\Platform2Bundle\Antispam\OCAntispam
+        arguments:
+            - "@mailer"
+            - %locale%
+            - 50
